--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,10 @@
 name: lint-code
 
 on:
-  schedule:
-    - cron: '0 0 * * *' # every day at midnight
+  pull_request:
+    branches:
+      - develop
+      - main
 
   push:
     branches:
@@ -16,10 +18,9 @@ on:
       # prerelease tags, more or less
       - 'v[0-9]+.[0-9]+.[0-9]+-*'
 
-  pull_request:
-    branches:
-      - develop
-      - main
+permissions:
+  contents: read
+  pull-requests: read
 
 jobs:
   pre-commit:
@@ -28,6 +29,6 @@ jobs:
       - name: Checkout
         if: ${{ !env.ACT }}
         uses: actions/checkout@v2
-      - uses: hadenlabs/action-pre-commit@0.1.8
+      - uses: hadenlabs/action-pre-commit@0.2.0
         with:
           args: run --all-files
